--- a/style.css
+++ b/style.css
@@ -13,15 +13,19 @@ body {
   min-width: 320px;
   font-size: 0.875rem;
 }
-.header {
+.header1,
+.header2 {
   background-color: #fff;
   color: #000;
   padding: 15px 5px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 .converse {
   text-transform: uppercase;
   font-weight: bold;
-  font-size: 18px;
+  font-size: 16px;
   font-family: proxima nova, proxima-nova, Helvetica, Arial, sans-serif;
   margin-top: 2px;
 }
@@ -78,9 +82,73 @@ li{
 ul {
   list-style-type: none;
 }
-
-
-
+/* belgium page
+nabar */
+.banner{
+    background: #f4f4f4;
+    color: #000;
+    min-height: 3.125rem;
+    border-top: 0.0625rem solid #e5e5e5;
+    border-bottom: 0.0625rem solid #e5e5e5;
+}
+.items,
+.user{
+  display: none;
+}
+.vectors{
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+#search{
+  width: 23px;
+  height: 23px;
+}
+.header2{
+  padding: 10px;
+  width: 100%;
+}
+.carasol1{
+  width: 100%;
+}
+.carasol1 > img{
+  width: 100%;
+  height: 320px;
+}
+.carasol2{
+  display: none;
+}
+.content{
+  margin-top: -1%;
+  background-color: #fff;
+  color: #000;
+  padding: 20px;
+}
+.text-bold{
+  font-size: 2.20rem;
+  margin-bottom: 1.125rem;
+  text-align: left;
+}
+.title{
+  line-height: 1.57;
+  font-size: 1.125rem;
+}
+.btn{
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  margin: 20px 0px;
+}
+.btn > div{
+  background-color: #000;
+    border-color: #000;
+    color: #fff;
+    text-align: center;
+    width: 100%;
+    padding: 20px;
+    font-size: 1.125rem;
+    font-weight: 600;
+}
 
 @media (min-width: 768px) {
   .para {
@@ -112,4 +180,52 @@ ul {
       line-height: 1.31;
       font-size: 20px;
   }
+  .carasol1{
+    display: none;
+  }
+  .carasol2{
+    display: unset;
+    width: 100%;
+    position: relative;
+  }
+  .carasol2 > img{
+    width: 100%;
+  }
+  .content{
+    position: absolute;
+    top: 1272px;
+    padding: 0px 80px;
+    text-align: center;
+    color: #fff;
+    background-color: rgba(0, 0, 0, 0);
+  }
+  span{
+    text-align: center;
+  }
+  .btn{
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+    margin: 10px 160px;
+  }
+  .btn > div{
+      color: #000;
+      border-color: #fff;
+      background-color: #fff;
+      text-align: center;
+      width: 100%;
+      padding: 15px;
+      font-size: 1.125rem;
+      font-weight: 600;
+  }
+  .title{
+  line-height: 1.57;
+  font-size: 20px;
+  padding: 0px 140px;
+}
+.text-bold{
+  font-size: 35px;
+  margin-bottom: 1.125rem;
+  text-align: center;
+}
 }
