--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
 .header2 {
   background-color: #fff;
   color: #000;
-  padding: 15px 5px;
+  /* padding: 15px 5px; */
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -29,7 +29,7 @@ body {
   font-family: proxima nova, proxima-nova, Helvetica, Arial, sans-serif;
   margin-top: 2px;
 }
-.bar {
+.bar2 {
   display: flex;
   align-items: center;
   gap: 4px;
@@ -55,7 +55,7 @@ body {
   font-weight: 600;
   margin: 30px 0px;
 }
-.country-container{
+.countryContainer{
   padding: 20px 10px 50px 10px;
 }
 .heading {
@@ -104,7 +104,8 @@ nabar */
   width: 23px;
   height: 23px;
 }
-.header2{
+.header2,
+.header1{
   padding: 10px;
   width: 100%;
 }
@@ -114,6 +115,7 @@ nabar */
 .carasol1 > img{
   width: 100%;
   height: 320px;
+  object-fit: cover;
 }
 .carasol2{
   display: none;
@@ -149,6 +151,16 @@ nabar */
     font-size: 1.125rem;
     font-weight: 600;
 }
+button{
+  border: none;
+  background-color: rgba(0, 0, 0, 0);
+}
+.search2{
+  display: none;
+}
+.belgium{
+  display: none;
+}
 
 @media (min-width: 768px) {
   .para {
@@ -156,7 +168,7 @@ nabar */
     font-weight: 600;
     margin: 40px 0px;
   }
-  .country-container{
+  .countryContainer{
     padding: 30px 10px 90px 10px;
   }
   .heading {
@@ -180,8 +192,8 @@ nabar */
       line-height: 1.31;
       font-size: 20px;
   }
-  .carasol1{
-    display: none;
+  .header2{
+    padding: 0px 0px 0px 10px;
   }
   .carasol2{
     display: unset;
@@ -190,10 +202,12 @@ nabar */
   }
   .carasol2 > img{
     width: 100%;
+    object-fit: cover;
   }
   .content{
     position: absolute;
-    top: 1272px;
+    top: 180px;
+    bottom: 0px;
     padding: 0px 80px;
     text-align: center;
     color: #fff;
@@ -221,11 +235,50 @@ nabar */
   .title{
   line-height: 1.57;
   font-size: 20px;
-  padding: 0px 140px;
+  padding: 0px 80px;
 }
 .text-bold{
   font-size: 35px;
   margin-bottom: 1.125rem;
   text-align: center;
 }
+.hamburger,
+.carasol1{
+  display: none;
+}
+.items,
+.user{
+  display: flex;
+  gap: 20px;
+}
+.items > div{
+  font-size: .875rem;
+  font-weight: 600;
+}
+.bar1 {
+  display: flex;
+  align-items: center;
+  gap: 14px;
+}
+#user{
+  width: 27px;
+  height: 27px;
+}
+.vectors{
+  display: flex;
+  align-items: center;
+  gap: 8px;
+}
+.search2{
+background-color: #000;
+width: 50px;
+border: #000;
+display: unset;
+padding: 5px;
+margin: 0%;
+}
+.search1{
+  display: none;
+}
+
 }
