--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ body {
   font-weight: 600;
   margin: 30px 0px;
 }
-.countryContainer{
+.countryContainer {
   padding: 20px 10px 50px 10px;
 }
 .heading {
@@ -76,7 +76,7 @@ body {
   flex-direction: column;
   gap: 40px;
 }
-li{
+li {
   margin-top: 0.8rem;
 }
 ul {
@@ -84,82 +84,113 @@ ul {
 }
 /* belgium page
 nabar */
-.banner{
-    background: #f4f4f4;
-    color: #000;
-    min-height: 3.125rem;
-    border-top: 0.0625rem solid #e5e5e5;
-    border-bottom: 0.0625rem solid #e5e5e5;
+.banner {
+  background: #f4f4f4;
+  color: #000;
+  min-height: 3.125rem;
+  border-top: 0.0625rem solid #e5e5e5;
+  border-bottom: 0.0625rem solid #e5e5e5;
 }
 .items,
-.user{
+.user {
   display: none;
 }
-.vectors{
+.vectors {
   display: flex;
   align-items: center;
   gap: 5px;
 }
-#search{
+#search {
   width: 23px;
   height: 23px;
 }
 .header2,
-.header1{
+.header1 {
   padding: 10px;
   width: 100%;
 }
-.carasol1{
+.carasol1 {
   width: 100%;
 }
-.carasol1 > img{
+.carasol1 > img {
   width: 100%;
   height: 320px;
   object-fit: cover;
 }
-.carasol2{
+.carasol2 {
   display: none;
 }
-.content{
+.content {
   margin-top: -1%;
   background-color: #fff;
   color: #000;
   padding: 20px;
 }
-.text-bold{
-  font-size: 2.20rem;
+.text-bold {
+  font-size: 2.2rem;
   margin-bottom: 1.125rem;
   text-align: left;
 }
-.title{
+.title {
   line-height: 1.57;
   font-size: 1.125rem;
 }
-.btn{
+.btn {
   display: flex;
   flex-direction: column;
   gap: 20px;
   margin: 20px 0px;
 }
-.btn > div{
+.btn > div {
   background-color: #000;
-    border-color: #000;
-    color: #fff;
-    text-align: center;
-    width: 100%;
-    padding: 20px;
-    font-size: 1.125rem;
-    font-weight: 600;
+  border-color: #000;
+  color: #fff;
+  text-align: center;
+  width: 100%;
+  padding: 20px;
+  font-size: 1.125rem;
+  font-weight: 600;
 }
-button{
+button {
   border: none;
   background-color: rgba(0, 0, 0, 0);
 }
-.search2{
+.search2 {
   display: none;
 }
-.belgium{
+.belgium {
   display: none;
+}
+.ptag {
+  padding-top: 1.875rem;
+  margin: 0px 20px 20px 20px;
+  font-size: 1.5rem;
+  font-weight: 600;
+}
+.shoes-article {
+  background-color: #fff;
+  color: #000;
+  padding-bottom: 2.5rem;
+}
+.shoes {
+  display: flex;
+  overflow: auto;
+}
+.s{
+  margin-bottom: 20px;
+}
+.s,
+.s > img {
+  flex-basis: 35.66667%;
+  max-width: 98.66667%;
+  -webkit-flex-shrink: 0;
+  flex-shrink: 0;
+  margin-left: 10px;
+  
+}
+.s > p{
+  margin: 10px;
+  color: #353535;
 }
 
 @media (min-width: 768px) {
@@ -168,7 +199,7 @@ button{
     font-weight: 600;
     margin: 40px 0px;
   }
-  .countryContainer{
+  .countryContainer {
     padding: 30px 10px 90px 10px;
   }
   .heading {
@@ -183,28 +214,28 @@ button{
     flex-direction: row;
     gap: 40px;
   }
-  .europe{
+  .europe {
     margin-top: 35px;
     flex-basis: 83.33333%;
     max-width: 33.33333%;
   }
-  li{
-      line-height: 1.31;
-      font-size: 20px;
+  li {
+    line-height: 1.31;
+    font-size: 20px;
   }
-  .header2{
+  .header2 {
     padding: 0px 0px 0px 10px;
   }
-  .carasol2{
+  .carasol2 {
     display: unset;
     width: 100%;
     position: relative;
   }
-  .carasol2 > img{
+  .carasol2 > img {
     width: 100%;
     object-fit: cover;
   }
-  .content{
+  .content {
     position: absolute;
     top: 180px;
     bottom: 0px;
@@ -213,72 +244,75 @@ button{
     color: #fff;
     background-color: rgba(0, 0, 0, 0);
   }
-  span{
-    text-align: center;
-  }
-  .btn{
+  .btn {
     display: flex;
     flex-direction: row;
     gap: 20px;
     margin: 10px 160px;
   }
-  .btn > div{
-      color: #000;
-      border-color: #fff;
-      background-color: #fff;
-      text-align: center;
-      width: 100%;
-      padding: 15px;
-      font-size: 1.125rem;
-      font-weight: 600;
+  .btn > div {
+    color: #000;
+    border-color: #fff;
+    background-color: #fff;
+    text-align: center;
+    width: 100%;
+    padding: 15px;
+    font-size: 1.125rem;
+    font-weight: 600;
   }
-  .title{
-  line-height: 1.57;
-  font-size: 20px;
-  padding: 0px 80px;
+  .title {
+    line-height: 1.57;
+    font-size: 20px;
+    padding: 0px 80px;
+  }
+  .text-bold {
+    font-size: 35px;
+    margin-bottom: 1.125rem;
+    text-align: center;
+  }
+  .hamburger,
+  .carasol1 {
+    display: none;
+  }
+  .items,
+  .user {
+    display: flex;
+    gap: 20px;
+  }
+  .items > div {
+    font-size: 0.875rem;
+    font-weight: 600;
+  }
+  .bar1 {
+    display: flex;
+    align-items: center;
+    gap: 14px;
+  }
+  #user {
+    width: 27px;
+    height: 27px;
+  }
+  .vectors {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+  }
+  .search2 {
+    background-color: #000;
+    width: 50px;
+    border: #000;
+    display: unset;
+    padding: 5px;
+    margin: 0%;
+  }
+  .search1 {
+    display: none;
+  }
+  .s,
+.s > img {
+  flex-basis: 24.66667%;
+  max-width: 105.66667%;
+  flex-shrink: 0;
+  margin-left: 0%;
 }
-.text-bold{
-  font-size: 35px;
-  margin-bottom: 1.125rem;
-  text-align: center;
-}
-.hamburger,
-.carasol1{
-  display: none;
-}
-.items,
-.user{
-  display: flex;
-  gap: 20px;
-}
-.items > div{
-  font-size: .875rem;
-  font-weight: 600;
-}
-.bar1 {
-  display: flex;
-  align-items: center;
-  gap: 14px;
-}
-#user{
-  width: 27px;
-  height: 27px;
-}
-.vectors{
-  display: flex;
-  align-items: center;
-  gap: 8px;
-}
-.search2{
-background-color: #000;
-width: 50px;
-border: #000;
-display: unset;
-padding: 5px;
-margin: 0%;
-}
-.search1{
-  display: none;
-}
-
 }
