--- a/style.css
+++ b/style.css
@@ -159,6 +159,7 @@ button {
   display: none;
 }
 .belgium {
+  background-color: #fff;
   display: none;
 }
 .ptag {
@@ -234,9 +235,105 @@ button {
   font-size: 1.125rem;
 }
 
+/* cart one */
+.cart1,
+.cart2,
+.cart3,
+.cart4 {
+  background-color: #fff;
+  color: #000;
+  padding-top: 60px;
+}
+.l-img1,
+.l-img2,
+.l-img3,
+.l-img4 {
+  display: none;
+}
+.m-img1,
+.m-img2,
+.m-img3,
+.m-img4 {
+  width: 100%;
+  padding-top: 30px;
+}
+.m-img1 > img,
+.m-img2 > img,
+.m-img3 > img,
+.m-img4 > img{
+  width: 100%;
+  object-fit: cover;
+}
+.detail1,
+.detail2,
+.detail3,
+.detail4 {
+  text-align: center;
+  padding: 20px;
+}
+.detail1 > h1,
+.detail2 > h1,
+.detail3 > h1,
+.detail4 > h1  {
+  font-size: 36px;
+  font-weight: 700;
+  margin: 10px 0px;
+}
+.detail1 > p,
+.detail2 > p,
+.detail3 > p,
+.detail4 > p{
+  line-height: 1.57;
+  font-size: 1.125rem;
+  padding: 10px;
+}
+.detail1 > button,
+.detail2 > button,
+.detail3 > button,
+.detail4 > button {
+  margin: 10px 0px;
+  background-color: #000;
+  border-color: #000;
+  color: #fff;
+  width: 100%;
+  padding: 20px;
+  font-size: 1.125rem;
+  font-weight: 600;
+}
 
+/* cart two */
+.cart2{
+  padding-top: 10px;
+}
+.detail2{
+  text-align: left;
+}
+.detail2 > p{
+  padding: 0%;
+  margin: 10px 0px;
+}
+.detail2 > button{
+  margin: 10px 0px 30px 0px;
+}
+/* cart three */
+.cart3,
+.m-img3,
+.m-img3 > img{
+  padding-top: 0px;
+}
+.detail3 > p{
+  padding: 0%;
+  margin: 10px 12px;
+}
+/* cart two */
+.cart4{
+  padding-top: 0px;
+}
 
-
+.detail4 > p{
+  padding: 0%;
+  margin: 8px 0px;
+}
 
 @media (min-width: 768px) {
   .para {
@@ -366,7 +463,6 @@ button {
   .s > img {
     flex-basis: 25%;
     max-width: 100.1%;
-
     margin: 0%;
     object-fit: cover;
   }
@@ -381,11 +477,11 @@ button {
   }
 
   /* redboot section */
-  .mobile-img{
+  .mobile-img {
     display: none;
   }
   .laptop-img,
-  .article{
+  .article {
     display: unset;
     width: 100%;
     height: 380px;
@@ -396,34 +492,141 @@ button {
     margin: 0%;
   }
   .redboot-content {
-  padding:   -1px 20px 4px 260px;
-  margin-left: 70px;
-  text-align: right;
-  position: absolute;
-  top: 47px;
-  left: 213px;
-}
-.text {
-  font-weight: 700;
-  font-size: 34px;
-}
-.redboot-content > p {
-  margin: 15px 0px 15px 150px;
-  font-size: 24px;
-  line-height: 1.57;
-  font-size: 1.125rem;
-}
-#btn {
-  background-color: #fff;
-  border-color: #000;
-  color: #000;
-  text-align: center;
-  width: 200px;
-  padding: 20px;
-  font-size: 1.125rem;
-  font-weight: 600;
-}
-.b{
-  margin-left: 30px;
-}
+    padding: -1px 20px 4px 260px;
+    margin-left: 70px;
+    text-align: right;
+    position: absolute;
+    top: 47px;
+    left: 213px;
+  }
+  .text {
+    font-weight: 700;
+    font-size: 34px;
+  }
+  .redboot-content > p {
+    margin: 15px 0px 15px 150px;
+    font-size: 24px;
+    line-height: 1.57;
+    font-size: 1.125rem;
+  }
+  #btn {
+    background-color: #fff;
+    border-color: #000;
+    color: #000;
+    text-align: center;
+    width: 200px;
+    padding: 20px;
+    font-size: 1.125rem;
+    font-weight: 600;
+  }
+  .b {
+    margin-left: 30px;
+  }
+
+  /* cart one */
+  .m-img1,
+  .m-img2,
+  .m-img3,
+  .m-img4 {
+    display: none;
+  }
+  .l-img1,
+  .l-img4,
+  .l-img3 {
+    display: unset;
+    width: 100%;
+  }
+  .l-img1 > img,
+  .l-img4 > img,
+  .l-img3 > img{
+    width: 100%;
+    margin-bottom: -1%;
+    object-fit: cover;
+  }
+  .cart1 {
+    padding-top: 60px;
+  }
+  .detail1 {
+    width: 480px;
+    margin: auto;
+  }
+  .detail1 > h1 {
+    font-size: 40px;
+  }
+  .detail1 > p{
+    padding: 0%;
+    margin: 10px 0px;
+  }
+  .detail1 > button,
+  .detail2 > button {
+    width: 200px;
+    margin: 10px 0px;
+  }
+
+  /* cart two */
+  .cart2{
+    position: relative;
+    height: 85vh;
+    padding-top: 0%;
+  }
+  .l-img2{
+    width: 100%;
+    display: flex;
+    height: 85vh;
+  }
+  .l-img2 > img{
+    width: 33.33333%;
+    height: 85vh;
+  }
+  .detail2{
+    text-align: left;
+    width: 33.3333%;
+    position: absolute;
+    padding: 0px 20px 0px 20px;
+    margin: auto;
+    top: 70px;
+    left: 0px;
+  }
+  .detail2 > button{
+    margin: 0%;
+    padding: 10px;
+  }
+  /* cart three */
+
+  .cart4{
+    padding-top: 50px;
+    position: relative;
+  }
+  .cart3{
+    padding-top: 50px;
+    position: relative;
+  }
+  .l-img3,
+  .l-img3 > img{
+    margin-bottom: -1%;
+    height: 60vh;
+  }
+  .detail3{
+    color: #fff;
+    position: absolute;
+    top: 90px;
+    left: 10px;
+    margin: 0px 180px;
+    text-align: center;
+    padding: 0px 30px;
+  }
+  .detail3 > h1{
+    font-size: 30px;
+  }
+  .detail3 > p{
+    font-size: 15px;
+    margin: 0px 100px;
+  }
+  .detail3 > button{
+    background-color: #fff;
+    color: #000;
+    padding: 10px;
+    width: 170px;
+    margin: 0%;
+  }
 }
