--- a/style.css
+++ b/style.css
@@ -13,10 +13,27 @@ body {
   min-width: 320px;
   font-size: 0.875rem;
 }
-button{
+.flag,
+.l-arrow,
+.r-arrow{
+  display: none;
+}
+.offer{
+  margin: auto;
+}
+.policy{
+  padding: 10px;
+  margin: auto;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  font-size: 20px;
+  overflow: hidden;
+}
+button {
   cursor: pointer;
 }
-button:hover{
+button:hover {
   background-color: #fff;
   color: #000;
   border: #000;
@@ -117,6 +134,12 @@ nabar */
   padding: 10px;
   width: 100%;
 }
+/* .header2 {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 999;
+} */
 .carasol1 {
   width: 100%;
 }
@@ -268,7 +291,7 @@ button {
 .m-img1 > img,
 .m-img2 > img,
 .m-img3 > img,
-.m-img4 > img{
+.m-img4 > img {
   width: 100%;
   object-fit: cover;
 }
@@ -282,7 +305,7 @@ button {
 .detail1 > h1,
 .detail2 > h1,
 .detail3 > h1,
-.detail4 > h1  {
+.detail4 > h1 {
   font-size: 36px;
   font-weight: 700;
   margin: 10px 0px;
@@ -290,7 +313,7 @@ button {
 .detail1 > p,
 .detail2 > p,
 .detail3 > p,
-.detail4 > p{
+.detail4 > p {
   line-height: 1.57;
   font-size: 1.125rem;
   padding: 10px;
@@ -310,39 +333,76 @@ button {
 }
 
 /* cart two */
-.cart2{
+.cart2 {
   padding-top: 10px;
 }
-.detail2{
+.detail2 {
   text-align: left;
 }
-.detail2 > p{
+.detail2 > p {
   padding: 0%;
   margin: 10px 0px;
 }
-.detail2 > button{
+.detail2 > button {
   margin: 10px 0px 30px 0px;
 }
 /* cart three */
 .cart3,
 .m-img3,
-.m-img3 > img{
+.m-img3 > img {
   padding-top: 0px;
 }
-.detail3 > p{
+.detail3 > p {
   padding: 0%;
   margin: 10px 12px;
 }
 /* cart two */
-.cart4{
+.cart4 {
   padding-top: 0px;
 }
 
-.detail4 > p{
+.detail4 > p {
   padding: 0%;
   margin: 8px 0px;
 }
+/* cart five */
+.cart5{
+  background-color: #fff;
+}
+.box{
+  width: 100%;
+  position: relative;
+}
+.box > img{
+  position: relative;
+ width: 100%; 
+ height: 36vh;
+}
+.r-box{
+  color: #000;
+  position: absolute;
+  left: 145px;
+  top: 32px;
+  width: 50%;
+  margin: 0px 10px;
+}
+.r-box > h3{
+ font-size: 17px;
+}
+.r-box > p{
+  line-height: 1.57;
+    font-size: 1rem;
+    padding: 10px 0px;
+}
+.r-box > span{
+  font-weight: 600;
+    font-size: 15px;
+}
 
+/* cart six */
+.cart6{
+  background-color: #fff;
+}
 @media (min-width: 768px) {
   .para {
     font-size: 20px;
@@ -384,6 +444,7 @@ button {
   .carasol2 > img {
     width: 100%;
     object-fit: cover;
+    margin: -1% 0%;
   }
   .content {
     position: absolute;
@@ -546,7 +607,7 @@ button {
   }
   .l-img1 > img,
   .l-img4 > img,
-  .l-img3 > img{
+  .l-img3 > img {
     width: 100%;
     margin-bottom: -1%;
     object-fit: cover;
@@ -561,7 +622,7 @@ button {
   .detail1 > h1 {
     font-size: 40px;
   }
-  .detail1 > p{
+  .detail1 > p {
     padding: 0%;
     margin: 10px 0px;
   }
@@ -572,21 +633,21 @@ button {
   }
 
   /* cart two */
-  .cart2{
+  .cart2 {
     position: relative;
     height: 85vh;
     padding-top: 0%;
   }
-  .l-img2{
+  .l-img2 {
     width: 100%;
     display: flex;
     height: 85vh;
   }
-  .l-img2 > img{
+  .l-img2 > img {
     width: 33.33333%;
     height: 85vh;
   }
-  .detail2{
+  .detail2 {
     text-align: left;
     width: 33.3333%;
     position: absolute;
@@ -595,26 +656,26 @@ button {
     top: 70px;
     left: 0px;
   }
-  .detail2 > button{
+  .detail2 > button {
     margin: 0%;
     padding: 10px;
   }
   /* cart three */
 
-  .cart4{
+  .cart4 {
     padding-top: 50px;
     position: relative;
   }
-  .cart3{
+  .cart3 {
     padding-top: 50px;
     position: relative;
   }
   .l-img3,
-  .l-img3 > img{
+  .l-img3 > img {
     margin-bottom: -1%;
     height: 60vh;
   }
-  .detail3{
+  .detail3 {
     color: #fff;
     position: absolute;
     top: 90px;
@@ -623,14 +684,14 @@ button {
     text-align: center;
     padding: 0px 30px;
   }
-  .detail3 > h1{
+  .detail3 > h1 {
     font-size: 30px;
   }
-  .detail3 > p{
+  .detail3 > p {
     font-size: 15px;
     margin: 0px 100px;
   }
-  .detail3 > button{
+  .detail3 > button {
     background-color: #fff;
     color: #000;
     padding: 10px;
@@ -638,23 +699,58 @@ button {
     margin: 0%;
   }
   /* cart four */
-  .cart4{
+  .cart4 {
     position: relative;
   }
-  .detail4{
+  .detail4 {
     position: absolute;
-    top: 150px;
+    top: 109px;
     left: 0px;
     width: 33.3333%;
     text-align: left;
     padding: 0px 20px;
   }
-  .detail4 > h1{
+  .detail4 > h1 {
     font-size: 30px;
   }
-  .detail4 > button{
+  .detail4 > button {
     padding: 10px;
     width: 170px;
     margin: 0%;
   }
+  /* cart five */
+.cart5{
+  display: flex;
+  height: 63vh;
+  background-color: #fff;
+}
+.box{
+  width: 100%;
+  margin: 50px 0px 0px 0px;
+  position: relative;
+  padding: 0%;
+  padding-left: 108px;  
+}
+.box > img{
+  position: relative;
+ max-width: 90.3333%;
+ margin: auto;
+ height: 22vh;
+ display: flex;
+ flex-direction: column;
+ align-items: center;
+}
+.r-box{
+  color: #000;
+  position: absolute;
+  left: 20px;
+  top: 100px;
+  width: 70%;
+  text-align: center;
+  margin: 0px 10px;
+  height: 24vh;
+}
+.short{
+  margin-bottom: 27px;
+}
 }
