--- a/style.css
+++ b/style.css
@@ -15,13 +15,13 @@ body {
 }
 .flag,
 .l-arrow,
-.r-arrow{
+.r-arrow {
   display: none;
 }
-.offer{
+.offer {
   margin: auto;
 }
-.policy{
+.policy {
   padding: 10px;
   margin: auto;
   display: flex;
@@ -278,27 +278,32 @@ button {
 .l-img1,
 .l-img2,
 .l-img3,
-.l-img4 {
+.l-img4,
+.l-img6,
+.l-img7 {
   display: none;
 }
 .m-img1,
 .m-img2,
 .m-img3,
-.m-img4 {
+.m-img4,
+.m-img7 {
   width: 100%;
   padding-top: 30px;
 }
 .m-img1 > img,
 .m-img2 > img,
 .m-img3 > img,
-.m-img4 > img {
+.m-img4 > img,
+.m-img7 > img {
   width: 100%;
   object-fit: cover;
 }
 .detail1,
 .detail2,
 .detail3,
-.detail4 {
+.detail4,
+.detail7 {
   text-align: center;
   padding: 20px;
 }
@@ -313,7 +318,8 @@ button {
 .detail1 > p,
 .detail2 > p,
 .detail3 > p,
-.detail4 > p {
+.detail4 > p,
+.detail7 > p {
   line-height: 1.57;
   font-size: 1.125rem;
   padding: 10px;
@@ -321,7 +327,8 @@ button {
 .detail1 > button,
 .detail2 > button,
 .detail3 > button,
-.detail4 > button {
+.detail4 > button,
+.detail7 > button {
   margin: 10px 0px;
   background-color: #000;
   border-color: #000;
@@ -366,19 +373,19 @@ button {
   margin: 8px 0px;
 }
 /* cart five */
-.cart5{
+.cart5 {
   background-color: #fff;
 }
-.box{
+.box {
   width: 100%;
   position: relative;
 }
-.box > img{
+.box > img {
   position: relative;
- width: 100%; 
- height: 36vh;
+  width: 100%;
+  height: 36vh;
 }
-.r-box{
+.r-box {
   color: #000;
   position: absolute;
   left: 145px;
@@ -386,23 +393,74 @@ button {
   width: 50%;
   margin: 0px 10px;
 }
-.r-box > h3{
- font-size: 17px;
+.r-box > h3 {
+  font-size: 17px;
 }
-.r-box > p{
+.r-box > p {
   line-height: 1.57;
-    font-size: 1rem;
-    padding: 10px 0px;
+  font-size: 1rem;
+  padding: 10px 0px;
 }
-.r-box > span{
+.r-box > span {
   font-weight: 600;
-    font-size: 15px;
+  font-size: 15px;
 }
 
 /* cart six */
-.cart6{
+.cart6,
+.cart7 {
   background-color: #fff;
+  color: #000;
+  width: 100%;
+  padding: 55px 0px;
 }
+.upper1,
+.lower1 {
+  width: 100%;
+  display: flex;
+}
+.upper1 > img,
+.lower1 > img {
+  width: 50%;
+}
+.detail6 {
+  width: 50%;
+  text-align: center;
+  margin: auto;
+}
+.detail6 > span {
+  font-weight: 600;
+  font-size: 18px;
+}
+.detail6 > p {
+  line-height: 1.57;
+  font-size: 22px;
+  padding: 10px 0px;
+}
+.click {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+  width: 50%;
+  margin: auto;
+  text-align: center;
+}
+.click > h2 {
+  font-size: 20px;
+}
+.click > img {
+  width: 20px;
+  height: 20px;
+}
+/* cart seven */
+.cart7 {
+  padding-top: 0;
+  padding-bottom: 0;
+}
+.detail7 > button {
+  margin: 20px 0px 10px 0px;
+}
+
 @media (min-width: 768px) {
   .para {
     font-size: 20px;
@@ -596,18 +654,22 @@ button {
   .m-img1,
   .m-img2,
   .m-img3,
-  .m-img4 {
+  .m-img4,
+  .m-img6,
+  .m-img7 {
     display: none;
   }
   .l-img1,
   .l-img4,
-  .l-img3 {
+  .l-img3,
+  .l-img7{
     display: unset;
     width: 100%;
   }
   .l-img1 > img,
   .l-img4 > img,
-  .l-img3 > img {
+  .l-img3 > img,
+  .l-img7 > img {
     width: 100%;
     margin-bottom: -1%;
     object-fit: cover;
@@ -719,38 +781,102 @@ button {
     margin: 0%;
   }
   /* cart five */
-.cart5{
-  display: flex;
-  height: 63vh;
-  background-color: #fff;
-}
-.box{
-  width: 100%;
-  margin: 50px 0px 0px 0px;
-  position: relative;
-  padding: 0%;
-  padding-left: 108px;  
-}
-.box > img{
-  position: relative;
- max-width: 90.3333%;
- margin: auto;
- height: 22vh;
- display: flex;
- flex-direction: column;
- align-items: center;
-}
-.r-box{
-  color: #000;
-  position: absolute;
-  left: 20px;
-  top: 100px;
-  width: 70%;
-  text-align: center;
-  margin: 0px 10px;
-  height: 24vh;
-}
-.short{
-  margin-bottom: 27px;
-}
+  .cart5 {
+    display: flex;
+    height: 63vh;
+    background-color: #fff;
+  }
+  .box {
+    width: 100%;
+    margin: 50px 0px 0px 0px;
+    position: relative;
+    padding: 0%;
+    padding-left: 108px;
+  }
+  .box > img {
+    position: relative;
+    max-width: 90.3333%;
+    margin: auto;
+    height: 22vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .r-box {
+    color: #000;
+    position: absolute;
+    left: 20px;
+    top: 100px;
+    width: 70%;
+    text-align: center;
+    margin: 0px 10px;
+    height: 24vh;
+  }
+  .short {
+    margin-bottom: 27px;
+  }
+  /* cart six */
+  .cart6{
+    background-color: #fff;
+    width: 100%;
+    display: flex;
+    height: 105vh;
+    padding: 0;
+  }
+  .l-img6{
+    width: 100%;
+    display: flex;
+  }
+  .upper2{
+    width: 50%;
+  }
+  .upper2 > img{
+    width: 100%;
+    height: 105vh;
+  }
+  .lower2,
+  .lower2 > img{
+    width: 50%;
+  }
+  .up-img > img{
+    width: 100%;
+    height: 50vh;
+  }
+  .up-img{
+    margin: 0%;
+    padding: 0;
+    width: 100%;
+    height: 50vh;
+  }
+  .low-img{
+    margin: 0%;
+    padding: 0;
+    width: 100%;
+    height: 55vh;
+    display: flex;
+  }
+  .low-img > img{
+    width: 50%;
+    height: 55vh;
+  }
+  /* cart seven */
+  .cart7{
+    position: relative;
+  }
+  .l-img7 > img, 
+  .l-img7{
+    height: 90vh;
+    width: 100%;
+  }
+  .detail7{
+    position: absolute;
+    top: 345px;
+    left: -30px;
+    padding: 0px 50px;
+    margin: 0px 100px;
+  }
+  .detail7 > button{
+    width: 250px;
+    margin: 0%;
+  }
 }
