--- a/style.css
+++ b/style.css
@@ -611,6 +611,9 @@ option {
 }
 
 /* next page of shoes data */
+.shoes-data-page{
+  display: none;
+}
 .main{
   background-color: #fff;
 }
@@ -658,6 +661,39 @@ option {
   line-height: 26px;
   padding: 20px 30px;
 }
+
+.shoes-data{
+  display: grid;
+  grid-template-columns: auto auto;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+  background-color: #fff;
+  width: 100%;
+}
+.shoes-data-columns{
+  padding: 10px;
+  /* background-color: #adadad; */
+  width: 100%;
+}
+.shoes-image{
+  width: 100%;
+  object-fit: cover;
+}
+.shoes-p{
+  color: #000;
+  padding: 1px 0px;
+}
+.shoes-shade{
+  color: #9b9b9b;
+  text-transform: uppercase;
+  font-size: 12px;
+  margin-top: 3px;
+}
+
+
+
+
 
 @media (min-width: 768px) {
   .para {
@@ -1114,5 +1150,93 @@ option {
   .detail7 > button {
     width: 250px;
     margin: 0%;
+  }
+  .footer{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .footer-top{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 50px 20px 20px 20px;
+  }
+  .footer-signup {
+    gap: 40px;
+    display: flex;
+    align-items: center;
+  }
+  .footer-down {
+    display: flex;
+    gap: 50px;
+    color: #000;
+  }
+  .footer-down > div > h1{
+    text-transform: uppercase;
+    margin-bottom: 2em;
+    font-weight: 400;
+    font-size: 1.2em;
+  }
+  .about > ul > li,
+  .legal > ul > li, 
+  .shopping > ul > li,
+  .nike > ul > li{
+    font-size: 15px;
+  }
+  .footer-flag{
+    margin: 90px 0px 0px 0px;
+    display: flex;
+    align-items: center;
+    gap: 18px;
+  }
+  #email,
+#dob {
+  width: 110%;
+}
+  select {
+    width: 60%;
+    font-size: 17px;
+  }
+  option {
+    color: #000;
+    font-size: 17px;
+  }
+  .join-now > button {
+    width: 100px;
+    padding: 10px 15px;
+  }
+  .gender-joinbtn {
+    display: flex;
+    align-items: center;
+    gap: 40px;
+  }
+  .footer-signup > div {
+    margin: 20px 0px;
+  }
+  .social-media {
+    margin: 40px;
+  }
+  .footer-button {
+    display: none;
+  }
+  .more {
+    border: none;
+    height: 100%;
+    -webkit-appearance: menulist-button;
+    font-size: 22px;
+    border-radius: 0;
+    outline: none;
+    color: #fff;
+    overflow: hidden;
+  }
+  .shoes-data{
+    display: grid;
+    grid-template-columns: auto auto auto;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px;
+    background-color: #fff;
+    width: 100%;
   }
 }
