--- a/style.css
+++ b/style.css
@@ -7,11 +7,9 @@
   box-sizing: border-box;
   font-family: proxima nova, proxima-nova, Helvetica, Arial, sans-serif;
 }
-body {
-  background-color: #000;
-  color: #fff;
-  min-width: 320px;
-  font-size: 0.875rem;
+button{
+  border: none;
+  cursor: pointer;
 }
 .flag,
 .l-arrow,
@@ -25,19 +23,11 @@ body {
   padding: 10px;
   display: flex;
   align-items: center;
-  text-align: center;
+  justify-content: center;
   font-size: 14px;
-  overflow: hidden;
   text-decoration: underline;
 }
-button {
-  cursor: pointer;
-}
-button:hover {
-  background-color: #fff;
-  color: #000;
-  border: #000;
-}
+
 .header1,
 .header2,
 .shoes-data-header {
@@ -52,7 +42,6 @@ button:hover {
   text-transform: uppercase;
   font-weight: bold;
   font-size: 16px;
-  font-family: proxima nova, proxima-nova, Helvetica, Arial, sans-serif;
   margin-top: 2px;
 }
 .bar2 {
@@ -76,13 +65,16 @@ button:hover {
   gap: 2px;
 }
 .para {
-  font-family: proxima nova, proxima-nova, Helvetica, Arial, sans-serif;
   text-align: center;
   font-weight: 600;
   margin: 30px 0px;
 }
 .countryContainer {
   padding: 20px 10px 50px 10px;
+  background-color: #000;
+  color: #fff;
+  min-width: 320px;
+  font-size: 0.875rem;
 }
 .heading {
   display: inline-block;
@@ -107,6 +99,9 @@ li {
 }
 ul {
   list-style-type: none;
+}
+#belgium{
+  cursor: pointer;
 }
 /* belgium page
 nabar */
@@ -175,19 +170,14 @@ nabar */
   gap: 20px;
   margin: 20px 0px;
 }
-.btn > div {
+.btn > button {
   background-color: #000;
   border-color: #000;
   color: #fff;
-  text-align: center;
   width: 100%;
   padding: 20px;
   font-size: 1.125rem;
   font-weight: 600;
-}
-button {
-  border: none;
-  background-color: rgba(0, 0, 0, 0);
 }
 .search2 {
   display: none;
@@ -213,6 +203,7 @@ button {
 }
 .s {
   margin-bottom: 20px;
+  cursor: pointer;
   background-color: #35353500;
 }
 .s,
@@ -246,9 +237,7 @@ button {
 }
 #btn {
   background-color: #000;
-  border-color: #000;
   color: #fff;
-  text-align: center;
   width: 100%;
   padding: 20px;
   font-size: 1.125rem;
@@ -336,6 +325,7 @@ button {
   background-color: #000;
   border-color: #000;
   color: #fff;
+  cursor: pointer;
   width: 100%;
   padding: 20px;
   font-size: 1.125rem;
@@ -791,15 +781,10 @@ option {
     gap: 20px;
     margin: 10px 160px;
   }
-  .btn > div {
-    color: #000;
-    border-color: #fff;
+  .btn > button {
+    width: 200px;
     background-color: #fff;
-    text-align: center;
-    width: 100%;
-    padding: 15px;
-    font-size: 1.125rem;
-    font-weight: 600;
+    color: #000;
   }
   .title {
     line-height: 1.57;
